# annual-report-intelligent-search

./: .gitignore  README.md  install_dependencies.sh  pyproject.toml  requirements.txt  start_interface.sh  start_server.sh
flows/: index.yml  index_query.yml  query.yml
interface/: streamlit.py
neural_search/: main.py
neural_search/api/: server.py
neural_search/core/: executors.py  index.py  query.py  search.py  tagger.py  utils.py
neural_search/core/executors/: encoder.py  indexer.py  sentence_encoder.py
