[tool.poetry]
name = "neural-search"
version = "0.1.0"
description = "POC using JinaAI as search and index engine."
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.4"
sentence-transformers = "^2.1.0"
jina = "^2.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
