[tool.poetry]
name = "neural-search"
version = "0.1.0"
description = "POC using JinaAI as search and index engine."
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.4"
sentence-transformers = "2.0.0"
streamlit = "^1.5.1"
fastapi = "^0.73.0"
spacy = "^3.2.2"
jina = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
